--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,6 +77,7 @@ jobs:
         
         echo "Deployed Function App: $functionAppName"
         echo "Deployed Storage Account: $storageAccountName"
+        echo "Using Defender for Servers for software inventory collection"
 
   seed-data:
     needs: infrastructure
