--- a/local.settings.json
+++ b/local.settings.json
@@ -4,7 +4,6 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "powershell",
     "FUNCTIONS_WORKER_RUNTIME_VERSION": "7.4",
-    "STORAGE_ACCOUNT_NAME": "your-storage-account-name",
-    "LOG_ANALYTICS_WORKSPACE_ID": "your-workspace-id"
+    "STORAGE_ACCOUNT_NAME": "your-storage-account-name"
   }
 }
